--- a/Example/Podfile
+++ b/Example/Podfile
@@ -4,7 +4,8 @@
 target 'Example' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
-  pod 'LYNetManager', :path => '../'
+#  pod 'LYNetManager', :path => '../'
   # Pods for Example
-
+pod 'AFNetworking', '~> 4.0.1'
+pod 'YYCache', '~> 1.0.4'
 end
